seo index,html updated

--- a/index.html
+++ b/index.html
@@ -3,24 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aman Portfolio</title>
-    <meta name="description" content="Aman" />
-    <meta name="author" content="Aman" />
+    <title>Aman Singhal | Open-Source Enthusiast & Web Developer</title>
 
-    <meta property="og:title" content="Aman" />
-    <meta property="og:description" content="Aman" />
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Aman Singhal - Passionate CSE (AI) student focused on web development, AI, and open-source contributions. Explore projects, experience, and certifications." />
+    <meta name="author" content="Aman Singhal" />
+    <meta name="keywords" content="Aman Singhal, Portfolio, Web Developer, React Developer, Open Source, CSE AI, Full Stack Developer, Tailwind CSS, TypeScript, Poornima College, Jaipur, SAS Viya, AI Projects, Student Management System" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Aman Singhal | Open-Source Enthusiast & Web Developer" />
+    <meta property="og:description" content="Explore Aman Singhal's portfolio featuring web development projects, open-source work, AI knowledge, and technical certifications." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://amansinghal-portfolio.netlify.app" />
     <meta property="og:image" content="/images/aman.png" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="" />
+    <meta name="twitter:title" content="Aman Singhal | Full Stack Developer & AI Enthusiast" />
+    <meta name="twitter:description" content="Portfolio of Aman Singhal, showcasing expertise in React, AI, open-source contributions, and impactful projects." />
     <meta name="twitter:image" content="/images/aman.png" />
 
-
+    <!-- Favicon and Manifest -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://amansinghal-portfolio.netlify.app" />
+
+    <meta name="google-site-verification" content="fWYBFUstJP0UXotJ58EoQR32rB3XooRFmnuWnokAKyI" />
+
   </head>
 
   <body>
